--- a/fundamentals/oop/tutorial_en.ipynb
+++ b/fundamentals/oop/tutorial_en.ipynb
@@ -2,6 +2,7 @@
   "cells": [
     {
       "cell_type": "markdown",
+      "id": "39b47a89-6423-4558-a871-9165b8138c10",
       "metadata": {},
       "source": [
         "# Object-oriented programming concepts\n",
@@ -35,14 +36,35 @@
         "**In Python, everything is an object** (in the OOP sense). Let's look at what\n",
         "this means by retrieving the type of different objects we have\n",
         "seen in previous tutorials."
-      ],
-      "id": "39b47a89-6423-4558-a871-9165b8138c10"
+      ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
+      "id": "80bed794",
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "<class 'int'>\n",
+            "<class 'str'>\n",
+            "<class 'list'>\n",
+            "<class 'tuple'>\n",
+            "<class 'dict'>\n",
+            "<class 'function'>\n"
+          ]
+        },
+        {
+          "ename": "",
+          "evalue": "",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[1;31mThe Kernel crashed while executing code in the the current cell or a previous cell. Please review the code in the cell(s) to identify a possible cause of the failure. Click <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. View Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+          ]
+        }
+      ],
       "source": [
         "print(type(1))\n",
         "print(type(\"bonjour\"))\n",
@@ -54,11 +76,11 @@
         "    print(x)\n",
         "          \n",
         "print(type(f))"
-      ],
-      "id": "80bed794"
+      ]
     },
     {
       "cell_type": "markdown",
+      "id": "66a3b2a0-cf34-4505-8deb-3affb1a09167",
       "metadata": {},
       "source": [
         "These elements are all different types, but they have one thing in common:\n",
@@ -71,12 +93,12 @@
         "\n",
         "Let's look at how we can use the `class` statement to define\n",
         "our object “lemon”."
-      ],
-      "id": "66a3b2a0-cf34-4505-8deb-3affb1a09167"
+      ]
     },
     {
       "cell_type": "code",
       "execution_count": null,
+      "id": "3261d5ba",
       "metadata": {},
       "outputs": [],
       "source": [
@@ -95,11 +117,11 @@
         "            print(\"Il n'y a pas assez de jus dans le citron pour la quantité demandée.\")\n",
         "        else:\n",
         "            self.jus = max(0, self.jus - quantite)  # avoid any negative value of `juice`"
-      ],
-      "id": "3261d5ba"
+      ]
     },
     {
       "cell_type": "markdown",
+      "id": "8554adf0-154f-43ea-9df2-abb0d92c0d6b",
       "metadata": {},
       "source": [
         "Let's analyze the syntax for constructing an object class:\n",
@@ -141,12 +163,12 @@
         "as above is simply putting this recipe in\n",
         "the Python environment. To create an object according to this class, you must\n",
         "**instantiate** it."
-      ],
-      "id": "8554adf0-154f-43ea-9df2-abb0d92c0d6b"
+      ]
     },
     {
       "cell_type": "code",
       "execution_count": null,
+      "id": "fbb5be5e",
       "metadata": {},
       "outputs": [],
       "source": [
@@ -155,11 +177,11 @@
         "\n",
         "print(type(citron1))\n",
         "print(type(citron2))"
-      ],
-      "id": "fbb5be5e"
+      ]
     },
     {
       "cell_type": "markdown",
+      "id": "2e7f1454-c5b4-4b9b-81da-93887fc370cb",
       "metadata": {},
       "source": [
         "Here we have created two instances of the `Citron` class. These two instances\n",
@@ -182,12 +204,12 @@
         "\n",
         "Once the object is instantiated, it is possible to access its\n",
         "attributes. The syntax is simple: `instance.attribute`."
-      ],
-      "id": "2e7f1454-c5b4-4b9b-81da-93887fc370cb"
+      ]
     },
     {
       "cell_type": "code",
       "execution_count": null,
+      "id": "f072959f",
       "metadata": {},
       "outputs": [],
       "source": [
@@ -195,11 +217,11 @@
         "print(citron2.couleur)\n",
         "print(citron1.jus)\n",
         "print(citron2.jus)"
-      ],
-      "id": "f072959f"
+      ]
     },
     {
       "cell_type": "markdown",
+      "id": "9deb6836-8b8e-4362-8f75-fd1b716fa3ee",
       "metadata": {},
       "source": [
         "We can clearly see that the two instances are **autonomous**: although they\n",
@@ -209,22 +231,22 @@
         "\n",
         "Modifying an attribute of an instance is very simple, the syntax is:\n",
         "`instance.attribute = new_value`."
-      ],
-      "id": "9deb6836-8b8e-4362-8f75-fd1b716fa3ee"
+      ]
     },
     {
       "cell_type": "code",
       "execution_count": null,
+      "id": "d2f787d7",
       "metadata": {},
       "outputs": [],
       "source": [
         "citron2.couleur = \"rouge\"\n",
         "print(citron2.couleur)"
-      ],
-      "id": "d2f787d7"
+      ]
     },
     {
       "cell_type": "markdown",
+      "id": "3a5235ba-616b-4676-88d6-114724263a9d",
       "metadata": {},
       "source": [
         "It is also possible to add an attribute using the same logic:\n",
@@ -263,21 +285,21 @@
         "\n",
         "The syntax for calling a method of an instantiated object is as follows\n",
         ": `instance.method(parameters)`."
-      ],
-      "id": "3a5235ba-616b-4676-88d6-114724263a9d"
+      ]
     },
     {
       "cell_type": "code",
       "execution_count": null,
+      "id": "b97817ca",
       "metadata": {},
       "outputs": [],
       "source": [
         "citron1.recup_qte_jus()"
-      ],
-      "id": "b97817ca"
+      ]
     },
     {
       "cell_type": "markdown",
+      "id": "c1f0e873-803c-4366-b9e0-779fd37430ab",
       "metadata": {},
       "source": [
         "There are two remarks that can be made about this syntax. The first is that **a\n",
@@ -286,21 +308,21 @@
         "methods have no existence of their own outside the instance of\n",
         "the object. In our case, call the *function* `recup_qte_jus()`\n",
         "regardless of the object therefore returns an error."
-      ],
-      "id": "c1f0e873-803c-4366-b9e0-779fd37430ab"
+      ]
     },
     {
       "cell_type": "code",
       "execution_count": null,
+      "id": "bbfbe590",
       "metadata": {},
       "outputs": [],
       "source": [
         "recup_qte_jus()"
-      ],
-      "id": "bbfbe590"
+      ]
     },
     {
       "cell_type": "markdown",
+      "id": "cd330c67-81f5-429a-9abb-58e3c4d3da6c",
       "metadata": {},
       "source": [
         "The second remark is that **we no longer specify the `self` parameter\n",
@@ -314,12 +336,12 @@
         "The whole point of methods is that they can access attributes,\n",
         "and thus carry out operations from these, but also\n",
         "modify. Let's take our example again to illustrate this possibility."
-      ],
-      "id": "cd330c67-81f5-429a-9abb-58e3c4d3da6c"
+      ]
     },
     {
       "cell_type": "code",
       "execution_count": null,
+      "id": "2d6308e9",
       "metadata": {},
       "outputs": [],
       "source": [
@@ -328,11 +350,11 @@
         "citron1.recup_qte_jus()\n",
         "citron1.extraire_jus(12)\n",
         "citron1.recup_qte_jus()"
-      ],
-      "id": "2d6308e9"
+      ]
     },
     {
       "cell_type": "markdown",
+      "id": "e7bbfdcc-a18a-4cc5-9491-d9f4319b01b4",
       "metadata": {},
       "source": [
         "The `recup_qte_jus` method simply allows you to display the value of a\n",
@@ -368,23 +390,23 @@
         "a condition may **limit the reproducibility of analyses**. For\n",
         "To illustrate this, let's go back to the tutorial example: run several\n",
         "the next cell times in a row."
-      ],
-      "id": "e7bbfdcc-a18a-4cc5-9491-d9f4319b01b4"
+      ]
     },
     {
       "cell_type": "code",
       "execution_count": null,
+      "id": "bca04222",
       "metadata": {},
       "outputs": [],
       "source": [
         "citron1.recup_qte_jus()\n",
         "citron1.extraire_jus(12)\n",
         "citron1.recup_qte_jus()"
-      ],
-      "id": "bca04222"
+      ]
     },
     {
       "cell_type": "markdown",
+      "id": "dbeefdd2-8395-4cf3-a3e7-08792235f64f",
       "metadata": {},
       "source": [
         "The three executions give different results, while the code\n",
@@ -420,11 +442,11 @@
         "an attribute outside a method?\n",
         "\n",
         "- 10/ When is OOP generally used?"
-      ],
-      "id": "dbeefdd2-8395-4cf3-a3e7-08792235f64f"
+      ]
     },
     {
       "cell_type": "markdown",
+      "id": "a2a7063e-e020-4d31-bd5b-fdcc527ebd96",
       "metadata": {},
       "source": [
         "<details>\n",
@@ -470,11 +492,11 @@
         "maintain the state of a resource within a program.\n",
         "\n",
         "</details>"
-      ],
-      "id": "a2a7063e-e020-4d31-bd5b-fdcc527ebd96"
+      ]
     },
     {
       "cell_type": "markdown",
+      "id": "be3caaa2-2830-4ae3-8aa4-ab251d59fd29",
       "metadata": {},
       "source": [
         "### From mass to juice\n",
@@ -495,12 +517,12 @@
         "\n",
         "Then instantiate a new lemon and check that everything works.\n",
         "as expected."
-      ],
-      "id": "be3caaa2-2830-4ae3-8aa4-ab251d59fd29"
+      ]
     },
     {
       "cell_type": "code",
       "execution_count": null,
+      "id": "692c75fe",
       "metadata": {},
       "outputs": [],
       "source": [
@@ -519,21 +541,21 @@
         "            print(\"Il n'y a pas assez de jus dans le citron pour la quantité demandée.\")\n",
         "        else:\n",
         "            self.jus = max(0, self.jus - quantite)  # avoid any negative value of `juice`"
-      ],
-      "id": "692c75fe"
+      ]
     },
     {
       "cell_type": "code",
       "execution_count": null,
+      "id": "a5d80f28",
       "metadata": {},
       "outputs": [],
       "source": [
         "# Test your answer in this cell"
-      ],
-      "id": "a5d80f28"
+      ]
     },
     {
       "cell_type": "markdown",
+      "id": "50d571e3-94df-45b5-88f2-d67b92e95721",
       "metadata": {},
       "source": [
         "<details>\n",
@@ -572,11 +594,11 @@
         "```\n",
         "\n",
         "</details>"
-      ],
-      "id": "50d571e3-94df-45b5-88f2-d67b92e95721"
+      ]
     },
     {
       "cell_type": "markdown",
+      "id": "19e7d16c-3669-4b94-96f6-18d5dfab4592",
       "metadata": {},
       "source": [
         "### Bank Accounts\n",
@@ -626,21 +648,21 @@
         "\n",
         "Create two clients and test the different features at\n",
         "implement work as expected."
-      ],
-      "id": "19e7d16c-3669-4b94-96f6-18d5dfab4592"
+      ]
     },
     {
       "cell_type": "code",
       "execution_count": null,
+      "id": "d08d18d9",
       "metadata": {},
       "outputs": [],
       "source": [
         "# Test your answer in this cell"
-      ],
-      "id": "d08d18d9"
+      ]
     },
     {
       "cell_type": "markdown",
+      "id": "064a5821-7786-4e9a-8e87-0d37d5eeb424",
       "metadata": {},
       "source": [
         "<details>\n",
@@ -711,18 +733,29 @@
         "```\n",
         "\n",
         "</details>"
-      ],
-      "id": "064a5821-7786-4e9a-8e87-0d37d5eeb424"
+      ]
     }
   ],
-  "nbformat": 4,
-  "nbformat_minor": 5,
   "metadata": {
     "kernelspec": {
-      "name": "python3",
       "display_name": "Python 3 (ipykernel)",
       "language": "python",
+      "name": "python3",
       "path": "/Users/gblin/opt/anaconda3/share/jupyter/kernels/python3"
+    },
+    "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.11.9"
     }
-  }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 5
 }
