--- a/notebookRita.ipynb
+++ b/notebookRita.ipynb
@@ -22,7 +22,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Exercises Bacis types and variables:\n",
+    "Exercises Basic types and variables:\n",
+    "\n",
+    "\n",
     "Types de base: int, float, str\n",
     "\n",
     "Conversion of integer to real number, and vice-versa: int(12.3) or float(12) will give 12 and 12.0, respectively\n",
@@ -102,6 +104,202 @@
     "- 7/ Why are sets more relevant than lists for\n",
     "carry out membership tests?\n",
     "Because they are more efficient for the computer, they work with hash tables, rather than searching one by one, following the indexes of the list."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Second class - 27/01/2025"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Exercises Logical tests:\n",
+    "\n",
+    "- 1/ What is the particularity of Booleans compared to others?\n",
+    "basic object types in Python?\n",
+    "They can only assume 2 values. \n",
+    "\n",
+    "- 2/ What are the inputs and outputs of an operator?\n",
+    "comparison ?\n",
+    "Inputs: values, Outputs: booleans.\n",
+    "\n",
+    "- 3/ What types of objects can be compared using a comparison operator?\n",
+    "comparison ?\n",
+    "Any type of objects.\n",
+    "\n",
+    "- 4/ What is the difference between the `=` operator and the `==` operator?\n",
+    "The '=' operator assigns a value to a variable, while the '==' operator is a comparison operator to check if two values are equal.\n",
+    "\n",
+    "- 5/ What are the inputs and outputs of a Boolean operator?\n",
+    "Inputs: booleans, Outputs: booleans.\n",
+    "\n",
+    "- 6/ Explain in French the principle of the Boolean operator `and`.\n",
+    "Same questions for `or` and `not`.\n",
+    "And: The conditions tested must be met at the same time, for the boolean to be True.\n",
+    "Or: Only one of the conditions has to be met for the boolean to return True.\n",
+    "Not: negation of boolean.\n",
+    "\n",
+    "- 7/ What is the difference between boolean expression and condition?\n",
+    "Both are boolean expressions. Condition is a test. We do something, depending on the value of the condition.\n",
+    "\n",
+    "- 8/ What is the structure of a conditional statement?\n",
+    "The conditional statement starts with an 'if' and ends with ':'. Then the next identation level lists the actions to execute if the condition is True. When it finishes, or if the condition returned False, it continues executing the code that is on the initial identation level.\n",
+    "\n",
+    "- 9/ Can we nest conditional statements?\n",
+    "Yes.\n",
+    "\n",
+    "\n",
+    "- 10/ Among the `if`, `else`, and `elif` instructions, which are\n",
+    "mandatory and which are optional?\n",
+    "If is mandatory. Elif and else are optional."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Exercises Loops:\n",
+    "\n",
+    "- 1/ How does a `for` loop work?\n",
+    "The for loop iterates an object a finite number of times and executes actions accordingly.\n",
+    "\n",
+    "- 2/ The iteration variable defined during a `for` loop\n",
+    "does it persist in memory after the loop is complete?\n",
+    "Yes.\n",
+    "\n",
+    "- 3/ What does the `range` function do? Why is it particularly\n",
+    "useful in `for` loops?\n",
+    "The range function defines integers between 0 and n-1, so it is useful to define the beggining and end of the for loop.\n",
+    "\n",
+    "- 4/ What does the `enumerate` function do? Why is it\n",
+    "particularly useful in `for` loops?\n",
+    "Generates a series of (index,element) pairs\n",
+    "\n",
+    "- 5/ How does a `while` loop work?\n",
+    "Iterates and executes actions accordingly as long as a certain condition is fulfilled.\n",
+    "\n",
+    "- 6/ When does a `while` loop stop? How does this differ from\n",
+    "`for` loops?\n",
+    "While loops can run infinetely, contrary to for loops that always iterate a finite number of times. \n",
+    "\n",
+    "- 7/ What does the `break` instruction do?\n",
+    "Stops the loop.\n",
+    "\n",
+    "- 8/ What does the `continue` instruction do?\n",
+    "Moves on to the next iteration of the loop."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Exercises Functions:\n",
+    "\n",
+    "- 1/ Why do we say that the use of functions in a program\n",
+    "is a good development practice? \n",
+    "Because it keeps the information organized, making the program easier to read. Decreases the duplication of code.\n",
+    "\n",
+    "- 2/ What are the three characteristics of a function?\n",
+    "Take arguments, execute actions, return values.\n",
+    "\n",
+    "- 3/ What is a “black box” function? What other functions does it have?\n",
+    "Are these functions opposed?\n",
+    "It's a pre-made/built-in function that we use without knowing exactly how it is executed and we trust the output values.\n",
+    "\n",
+    "- 4/ What happens when we define a function? And when we\n",
+    "call him?\n",
+    "When we define the function, we put the information in memory, but is is executed only when we call it.\n",
+    "\n",
+    "\n",
+    "- 5/ How many arguments can be passed to a function?\n",
+    "As many as we want.\n",
+    "\n",
+    "- 6/ What are the two ways of passing arguments to a\n",
+    "function ?\n",
+    "Keyword and position.\n",
+    "\n",
+    "- 7/ What is the use of passing optional arguments to a\n",
+    "function ?\n",
+    "\n",
+    "- 8/ In what order should the arguments of a function be passed?\n",
+    "if it has both mandatory and optional arguments?\n",
+    "First mandatory, sthen optional.\n",
+    "\n",
+    "- 9/ Are there functions that return nothing?\n",
+    "No. Even the functions in which we return nothing, an object of the NoneType will be returned.\n",
+    "\n",
+    "- 10/ Can a function return multiple objects?\n",
+    "No. To obtain multiple objects from a function, we need to use a container, such as a tuple.\n",
+    "\n",
+    "- 11/ What happens to the variables of the local *scope* of a function?\n",
+    "times the function was called?\n",
+    "They are not accessible to the global code."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Third class - 12/02/2025"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exercises Modules Files \n",
+    "\n",
+    "- 1/ What is a module?\n",
+    "A file with .py extension that contains code programmed by others, that we can import into our code, without the need to program it by hand from the beggining.\n",
+    "\n",
+    "- 2/ What is a package?\n",
+    "A group of multiple modules.\n",
+    "\n",
+    "- 3/ Why is it not a good practice to import all the\n",
+    "functions of a module with the syntax `from module import *`\n",
+    "Because we will be importing all the functions, and if we don't need them all, there's no point in increasing the content of our code.\n",
+    "\n",
+    "- 4/ What are the advantages of the `pathlib` library?\n",
+    "Allows the user to create paths in a very intuitive manner, regardless of the operative system that is being used.\n",
+    "\n",
+    "- 5/ What are the two properties of a file that allow\n",
+    "locate its position in the file system?\n",
+    "File name and path of the location where the file is located.\n",
+    "\n",
+    "- 6/ What is the current directory?\n",
+    "cwd. It's the current folder in which we are working.\n",
+    "\n",
+    "- 7/ What are the two ways to specify a path? How\n",
+    "Does `Python` differentiate between the two?\n",
+    "Relative and absolute. The last one always starts with the root of the file system.\n",
+    "\n",
+    "- 8/ What are the two main families of files that we are\n",
+    "brought to manipulate in programming?\n",
+    "Text files and binary files.\n",
+    "\n",
+    "- 9/ What are the different ways to open a file?\n",
+    "Read (r), write (w), and append (a). The first only has permission to read the contents of the file, the second allows to modify it everywhere, and the thirs only allows the user to add information at the end of the file.\n",
+    "\n",
+    "- 10/ Why is it better to use syntax\n",
+    "`with open(...) as ...` to open a file?\n",
+    "It opens the file, executes the actions that we program, and closes the file at the end.\n",
+    "\n",
+    "- 11/ Why can we browse the lines of a file using\n",
+    "of a loop?\n",
+    "Because the files are represented by iteratable objects in Python.\n",
+    "\n",
+    "- 12/ What is the difference between a module and a script?\n",
+    "A module is done to be imported by others into their codes, while a script is supposed to be executed directly."
    ]
   }
  ],
