--- a/projects/puissance4/tutorial_en.ipynb
+++ b/projects/puissance4/tutorial_en.ipynb
@@ -2,6 +2,7 @@
   "cells": [
     {
       "cell_type": "markdown",
+      "id": "75425fdc-870e-4502-96c4-e44a48155ed5",
       "metadata": {},
       "source": [
         "# Project 1 - Connect 4\n",
@@ -9,23 +10,23 @@
         "In this project we will implement a power 4 with an interface\n",
         "fairly basic graph. To achieve this, we will use the\n",
         "fundamental objects of Python."
-      ],
-      "id": "75425fdc-870e-4502-96c4-e44a48155ed5"
+      ]
     },
     {
       "cell_type": "code",
       "execution_count": null,
+      "id": "05ed3cdc",
       "metadata": {},
       "outputs": [],
       "source": [
         "import copy\n",
         "\n",
         "import solutions"
-      ],
-      "id": "05ed3cdc"
+      ]
     },
     {
       "cell_type": "markdown",
+      "id": "12ce22e9-7dac-472c-8160-18f191739746",
       "metadata": {},
       "source": [
         "## Rules of the game\n",
@@ -89,77 +90,126 @@
         "does not affect others.\n",
         "\n",
         "### Expected result"
-      ],
-      "id": "12ce22e9-7dac-472c-8160-18f191739746"
+      ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
+      "id": "fd47b838",
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "ename": "NameError",
+          "evalue": "name 'solutions' is not defined",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "Cell \u001b[1;32mIn[2], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m grid_solution \u001b[39m=\u001b[39m solutions\u001b[39m.\u001b[39minitialize_grid()\n\u001b[0;32m      2\u001b[0m grid_solution\n",
+            "\u001b[1;31mNameError\u001b[0m: name 'solutions' is not defined"
+          ]
+        }
+      ],
       "source": [
         "grid_solution = solutions.initialize_grid()\n",
         "grid_solution"
-      ],
-      "id": "fd47b838"
+      ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
+      "id": "da913469",
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "ename": "NameError",
+          "evalue": "name 'grid_solution' is not defined",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "Cell \u001b[1;32mIn[3], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mNumber of rows: \u001b[39m\u001b[39m{\u001b[39;00m\u001b[39mlen\u001b[39m(grid_solution)\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m)\n\u001b[0;32m      2\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mNumber of columns: \u001b[39m\u001b[39m{\u001b[39;00m\u001b[39mlen\u001b[39m(grid_solution[\u001b[39m0\u001b[39m])\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m)\n",
+            "\u001b[1;31mNameError\u001b[0m: name 'grid_solution' is not defined"
+          ]
+        }
+      ],
       "source": [
         "print(f\"Number of rows: {len(grid_solution)}\")\n",
         "print(f\"Number of columns: {len(grid_solution[0])}\")"
-      ],
-      "id": "da913469"
+      ]
     },
     {
       "cell_type": "markdown",
+      "id": "76fde4da-7928-4012-bd5d-b7eb4927be10",
       "metadata": {},
       "source": [
         "### Up to you !"
-      ],
-      "id": "76fde4da-7928-4012-bd5d-b7eb4927be10"
+      ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 14,
+      "id": "e53aee6b",
       "metadata": {},
       "outputs": [],
       "source": [
         "def initialize_grid():\n",
-        "    # Your code here\n",
+        "    grid = [['', '', '', '', '', '', ''], ['', '', '', '', '', '', ''], ['', '', '', '', '', '', ''], ['', '', '', '', '', '', ''], ['', '', '', '', '', '', ''], ['', '', '', '', '', '', '']]\n",
         "    return grid"
-      ],
-      "id": "e53aee6b"
+      ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 15,
+      "id": "e730680f",
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "[['', '', '', '', '', '', ''],\n",
+              " ['', '', '', '', '', '', ''],\n",
+              " ['', '', '', '', '', '', ''],\n",
+              " ['', '', '', '', '', '', ''],\n",
+              " ['', '', '', '', '', '', ''],\n",
+              " ['', '', '', '', '', '', '']]"
+            ]
+          },
+          "execution_count": 15,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "# Checking the result\n",
         "grid = initialize_grid()\n",
         "grid"
-      ],
-      "id": "e730680f"
+      ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 16,
+      "id": "dab8703d",
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Number of rows: 6\n",
+            "Number of columns: 7\n"
+          ]
+        }
+      ],
       "source": [
         "# Checking the result\n",
         "print(f\"Number of rows: {len(grid)}\")\n",
         "print(f\"Number of columns: {len(grid[0])}\")"
-      ],
-      "id": "dab8703d"
+      ]
     },
     {
       "cell_type": "markdown",
+      "id": "87c157e1-45f8-4e76-9ed5-2e863b4e2a22",
       "metadata": {},
       "source": [
         "## Grid representation\n",
@@ -178,71 +228,119 @@
         "`join` function which “joins” the elements of a list by separating them with\n",
         "a certain character. As a reminder, here is an example that uses these two\n",
         "concepts:"
-      ],
-      "id": "87c157e1-45f8-4e76-9ed5-2e863b4e2a22"
+      ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 17,
+      "id": "1b904e8b",
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "DEBUT a, b, c, d, e FIN\n"
+          ]
+        }
+      ],
       "source": [
         "l = [\"a\", \"b\", \"c\", \"d\", \"e\"]\n",
         "l_join = \"DEBUT \" + \", \".join(l) + \" FIN\"\n",
         "print(l_join)"
-      ],
-      "id": "1b904e8b"
+      ]
     },
     {
       "cell_type": "markdown",
+      "id": "8ff5f44f-fbbe-4ab2-94f6-30253bd3a31e",
       "metadata": {},
       "source": [
         "### Expected result"
-      ],
-      "id": "8ff5f44f-fbbe-4ab2-94f6-30253bd3a31e"
+      ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 18,
+      "id": "8260d16e",
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "ename": "NameError",
+          "evalue": "name 'solutions' is not defined",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "Cell \u001b[1;32mIn[18], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m solutions\u001b[39m.\u001b[39mdisplay_grid(grid_solution)\n",
+            "\u001b[1;31mNameError\u001b[0m: name 'solutions' is not defined"
+          ]
+        }
+      ],
       "source": [
         "solutions.display_grid(grid_solution)"
-      ],
-      "id": "8260d16e"
+      ]
     },
     {
       "cell_type": "markdown",
+      "id": "68f39146-9d5d-47ff-b3de-1e85ac7f6c53",
       "metadata": {},
       "source": [
         "### Up to you !"
-      ],
-      "id": "68f39146-9d5d-47ff-b3de-1e85ac7f6c53"
+      ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 21,
+      "id": "c194347f",
       "metadata": {},
-      "outputs": [],
-      "source": [
-        "def display_grid():\n",
-        "    # Your code here"
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "[['', '', '', '', '', '', ''],\n",
+              " ['', '', '', '', '', '', ''],\n",
+              " ['', '', '', '', '', '', ''],\n",
+              " ['', '', '', '', '', '', ''],\n",
+              " ['', '', '', '', '', '', ''],\n",
+              " ['', '', '', '', '', '', '']]"
+            ]
+          },
+          "execution_count": 21,
+          "metadata": {},
+          "output_type": "execute_result"
+        },
+        {
+          "ename": "",
+          "evalue": "",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[1;31mThe Kernel crashed while executing code in the the current cell or a previous cell. Please review the code in the cell(s) to identify a possible cause of the failure. Click <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. View Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+          ]
+        }
       ],
-      "id": "c194347f"
+      "source": [
+        "def display_grid(grid):\n",
+        "    # Your code here\n",
+        "    grid = \" | \".join(grid)\n",
+        "    return grid\n",
+        "\n",
+        "grid"
+      ]
     },
     {
       "cell_type": "code",
       "execution_count": null,
+      "id": "1fe551d0",
       "metadata": {},
       "outputs": [],
       "source": [
         "# Checking the result\n",
         "display_grid(grid)"
-      ],
-      "id": "1fe551d0"
+      ]
     },
     {
       "cell_type": "markdown",
+      "id": "723d5a67-9b2a-4e06-9084-8b89bc9fbaa6",
       "metadata": {},
       "source": [
         "## Game function\n",
@@ -272,12 +370,12 @@
         "in a non-existent column or with an unauthorized color.\n",
         "\n",
         "### Expected result"
-      ],
-      "id": "723d5a67-9b2a-4e06-9084-8b89bc9fbaa6"
+      ]
     },
     {
       "cell_type": "code",
       "execution_count": null,
+      "id": "b8170fc2",
       "metadata": {},
       "outputs": [],
       "source": [
@@ -286,20 +384,20 @@
         "grid_solution = solutions.make_move(grid=grid_solution, column_to_play=5, disc_color=\"J\")  # 2nd round of play\n",
         "grid_solution = solutions.make_move(grid=grid_solution, column_to_play=2, disc_color=\"R\")  # 3rd round of play\n",
         "solutions.display_grid(grid_solution)"
-      ],
-      "id": "b8170fc2"
+      ]
     },
     {
       "cell_type": "markdown",
+      "id": "67fb4a8f-c4f6-47d2-bc9a-b0e0aa01e19e",
       "metadata": {},
       "source": [
         "### Up to you !"
-      ],
-      "id": "67fb4a8f-c4f6-47d2-bc9a-b0e0aa01e19e"
+      ]
     },
     {
       "cell_type": "code",
       "execution_count": null,
+      "id": "000241a1",
       "metadata": {},
       "outputs": [],
       "source": [
@@ -307,12 +405,12 @@
         "    new_grid = copy.deepcopy(grid)  # Avoids modifying the initial grid\n",
         "    # Your code here\n",
         "    return new_grid"
-      ],
-      "id": "000241a1"
+      ]
     },
     {
       "cell_type": "code",
       "execution_count": null,
+      "id": "cef38d4a",
       "metadata": {},
       "outputs": [],
       "source": [
@@ -322,11 +420,11 @@
         "grid = make_move(grid=grid, column_to_play=5, disc_color=\"J\")  # 2nd round of play\n",
         "grid = make_move(grid=grid, column_to_play=2, disc_color=\"R\")  # 3rd round of play\n",
         "display_grid(grid)"
-      ],
-      "id": "cef38d4a"
+      ]
     },
     {
       "cell_type": "markdown",
+      "id": "6c12de3e-24a2-48f0-a2d3-a1c4442aae05",
       "metadata": {},
       "source": [
         "## Detecting a win (horizontal)\n",
@@ -349,12 +447,12 @@
         "meets the previous condition, and `False` otherwise\n",
         "\n",
         "### Expected result"
-      ],
-      "id": "6c12de3e-24a2-48f0-a2d3-a1c4442aae05"
+      ]
     },
     {
       "cell_type": "code",
       "execution_count": null,
+      "id": "4a913460",
       "metadata": {},
       "outputs": [],
       "source": [
@@ -365,12 +463,12 @@
         "print(solutions.check_row_victory(ligne1))  # Returns False\n",
         "print()  # Return to line\n",
         "print(solutions.check_row_victory(ligne2))  # Returns True"
-      ],
-      "id": "4a913460"
+      ]
     },
     {
       "cell_type": "code",
       "execution_count": null,
+      "id": "037a72e5",
       "metadata": {},
       "outputs": [],
       "source": [
@@ -387,31 +485,31 @@
         "print()  # Return to line\n",
         "\n",
         "print(solutions.check_horizontal_victory(grid_solution))  # Returns True"
-      ],
-      "id": "037a72e5"
+      ]
     },
     {
       "cell_type": "markdown",
+      "id": "1845691c-daf1-4c8f-beb6-f4f3c5071337",
       "metadata": {},
       "source": [
         "### Up to you !"
-      ],
-      "id": "1845691c-daf1-4c8f-beb6-f4f3c5071337"
+      ]
     },
     {
       "cell_type": "code",
       "execution_count": null,
+      "id": "8a24e20d",
       "metadata": {},
       "outputs": [],
       "source": [
         "def check_row_victory(ligne):\n",
         "    # Your code here"
-      ],
-      "id": "8a24e20d"
+      ]
     },
     {
       "cell_type": "code",
       "execution_count": null,
+      "id": "8b2b2b7b",
       "metadata": {},
       "outputs": [],
       "source": [
@@ -421,23 +519,23 @@
         "\n",
         "print(check_row_victory(row1))  # Returns False\n",
         "print(check_row_victory(row2))  # Returns True"
-      ],
-      "id": "8b2b2b7b"
+      ]
     },
     {
       "cell_type": "code",
       "execution_count": null,
+      "id": "2a6dd3f8",
       "metadata": {},
       "outputs": [],
       "source": [
         "def check_horizontal_victory(grid):\n",
         "    # Your code here"
-      ],
-      "id": "2a6dd3f8"
+      ]
     },
     {
       "cell_type": "code",
       "execution_count": null,
+      "id": "4b8761b2",
       "metadata": {},
       "outputs": [],
       "source": [
@@ -451,11 +549,11 @@
         "grid = make_move(grid=grid, column_to_play=5, disc_color=\"R\")\n",
         "display_grid(grid)\n",
         "print(check_horizontal_victory(grid))  # Returns True"
-      ],
-      "id": "4b8761b2"
+      ]
     },
     {
       "cell_type": "markdown",
+      "id": "a7ae3f37-269b-48e3-a936-bc342e8076c1",
       "metadata": {},
       "source": [
         "## Detecting a win (vertical)\n",
@@ -472,12 +570,12 @@
         "considered\n",
         "\n",
         "### Expected result"
-      ],
-      "id": "a7ae3f37-269b-48e3-a936-bc342e8076c1"
+      ]
     },
     {
       "cell_type": "code",
       "execution_count": null,
+      "id": "55615e61",
       "metadata": {},
       "outputs": [],
       "source": [
@@ -494,31 +592,31 @@
         "print()  # Return to line\n",
         "\n",
         "print(solutions.check_vertical_victory(grid_solution))  # Returns True"
-      ],
-      "id": "55615e61"
+      ]
     },
     {
       "cell_type": "markdown",
+      "id": "d4f23587-6648-4711-8481-38599dade2bf",
       "metadata": {},
       "source": [
         "### Up to you !"
-      ],
-      "id": "d4f23587-6648-4711-8481-38599dade2bf"
+      ]
     },
     {
       "cell_type": "code",
       "execution_count": null,
+      "id": "dd8010fc",
       "metadata": {},
       "outputs": [],
       "source": [
         "def check_vertical_victory(grid):\n",
         "    # Your code here"
-      ],
-      "id": "dd8010fc"
+      ]
     },
     {
       "cell_type": "code",
       "execution_count": null,
+      "id": "81fa97a7",
       "metadata": {},
       "outputs": [],
       "source": [
@@ -535,11 +633,11 @@
         "print()  # Return to line\n",
         "\n",
         "print(check_vertical_victory(grid))  # Returns True"
-      ],
-      "id": "81fa97a7"
+      ]
     },
     {
       "cell_type": "markdown",
+      "id": "7ed7b703-6929-4715-94ac-33df58ddb313",
       "metadata": {},
       "source": [
         "## End of game\n",
@@ -566,12 +664,12 @@
         "prints “END GAME”.\n",
         "\n",
         "### Expected result"
-      ],
-      "id": "7ed7b703-6929-4715-94ac-33df58ddb313"
+      ]
     },
     {
       "cell_type": "code",
       "execution_count": null,
+      "id": "9607f667",
       "metadata": {},
       "outputs": [],
       "source": [
@@ -584,31 +682,31 @@
         "grid_solution = solutions.make_move_and_check_victory(grid=grid_solution, column_to_play=2, disc_color=\"J\")\n",
         "print(\"Tour 4\")\n",
         "grid_solution = solutions.make_move_and_check_victory(grid=grid_solution, column_to_play=2, disc_color=\"J\")"
-      ],
-      "id": "9607f667"
+      ]
     },
     {
       "cell_type": "markdown",
+      "id": "930c1032-ecf3-49bd-adce-1cd4284b0a3f",
       "metadata": {},
       "source": [
         "### Up to you !"
-      ],
-      "id": "930c1032-ecf3-49bd-adce-1cd4284b0a3f"
+      ]
     },
     {
       "cell_type": "code",
       "execution_count": null,
+      "id": "1023101b",
       "metadata": {},
       "outputs": [],
       "source": [
         "def check_victory(grid):\n",
         "    # Your code here"
-      ],
-      "id": "1023101b"
+      ]
     },
     {
       "cell_type": "code",
       "execution_count": null,
+      "id": "03f2ad43",
       "metadata": {},
       "outputs": [],
       "source": [
@@ -616,12 +714,12 @@
         "    grid = copy.deepcopy(grid)\n",
         "    # Your code here\n",
         "    return grid"
-      ],
-      "id": "03f2ad43"
+      ]
     },
     {
       "cell_type": "code",
       "execution_count": null,
+      "id": "aaebc553",
       "metadata": {},
       "outputs": [],
       "source": [
@@ -635,18 +733,29 @@
         "grid = make_move_and_check_victory(grid=grid, column_to_play=2, disc_color=\"J\")\n",
         "print(\"Tour 4\")\n",
         "grid = make_move_and_check_victory(grid=grid, column_to_play=2, disc_color=\"J\")"
-      ],
-      "id": "aaebc553"
+      ]
     }
   ],
-  "nbformat": 4,
-  "nbformat_minor": 5,
   "metadata": {
     "kernelspec": {
-      "name": "python3",
       "display_name": "Python 3 (ipykernel)",
       "language": "python",
+      "name": "python3",
       "path": "/Users/gblin/opt/anaconda3/share/jupyter/kernels/python3"
+    },
+    "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.11.9"
     }
-  }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 5
 }
